# cosmic-settings-daemon

./: .gitignore  .releaserc.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Taskfile.yml
.github/workflows/: release.yaml  test.yaml
config/src/shortcuts/: action.rs
data/: ip-timezones.LICENSE  system_actions.ron
data/polkit-1/rules.d/: cosmic-settings-daemon.rules
pkg/rpm/: cosmic-settings-daemon.spec
src/: main.rs  offline_tz.rs  timezone.rs
tools/gen-ip-timezones/: Cargo.toml
tools/gen-ip-timezones/src/: main.rs
