[package]
name = "cosmic-settings-daemon"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace]
members = ["config", "cosmic-settings-daemon-config", "geonames"]
# Maintenance-only tool to regenerate data/ip-timezones.bin; not part of the
# daemon build (run manually — see tools/gen-ip-timezones/).
exclude = ["tools/gen-ip-timezones"]

[workspace.dependencies]
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
cosmic-theme = { git = "https://github.com/pop-os/libcosmic" }

# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }


[dependencies]
cosmic-settings-pulse-subscription = { git = "https://github.com/pop-os/cosmic-settings", default-features = false }
anyhow = "1.0.99"
cosmic-settings-daemon-config = { path = "./cosmic-settings-daemon-config", features = [
    "greeter",
] }
dirs = "6.0.0"
notify = "8.2.0"
tokio = { version = "1.47.1", features = ["macros", "net", "rt"] }
udev = "0.9.3"
zbus = { version = "5.11.0", default-features = false, features = ["tokio"] }
tokio-stream = "0.1.17"
sunrise = "2.1.0"
cosmic-config.workspace = true
cosmic-theme.workspace = true
cosmic-theme.export = true
cosmic-comp-config = { git = "https://github.com/pop-os/cosmic-comp" }
chrono = "0.4.42"
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false }
acpid_plug = "0.1.2"
upower_dbus = { git = "https://github.com/pop-os/dbus-settings-bindings" }
locale1 = { git = "https://github.com/pop-os/dbus-settings-bindings" }
cosmic-dbus-a11y = { git = "https://github.com/pop-os/dbus-settings-bindings" }
notify-rust = "4.11.7"
walkdir = "2.5.0"
memoize = "0.5.1"
futures-util = "0.3.31"
futures = "0.3.31"
ctrlc = { version = "3.5.0", features = ["termination"] }
xkb-data = "0.2.1"
geonames = { path = "geonames" }
# `bundled` carries the embedded timezone-boundary data that DefaultFinder needs;
# we drop the default `clap` feature (a CLI dep we don't use).
tzf-rs = { version = "1.3", default-features = false, features = ["bundled"] }
# HTTPS, used only to learn our own public IP for the offline timezone fallback
# (src/offline_tz.rs). rustls matches the rest of the tree — no extra TLS stack.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
log = "0.4.28"
env_logger = "0.11.8"
ddc-hi = "0.4.1"

# For development and testing purposes
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { git = "https://github.com/pop-os/libcosmic//" }
# iced_futures = { git = "https://github.com/pop-os/libcosmic//" }
# cosmic-config = { git = "https://github.com/pop-os/libcosmic//" }
# cosmic-theme = { git = "https://github.com/pop-os/libcosmic//" }
